--- a/Interceptor/packages.config
+++ b/Interceptor/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net35" requireReinstallation="True" />
+  <package id="PhantomJS" version="2.0.0" targetFramework="net45" />
+  <package id="phantomjs.exe" version="1.9.2.1" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.45.0" targetFramework="net45" />
 </packages>
