moved to full automation

--- a/Interceptor/App.config
+++ b/Interceptor/App.config
@@ -10,7 +10,7 @@
     </root>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <param name="File" value="log-file.txt" />
-      <param name="AppendToFile" value="true" />
+      <param name="AppendToFile" value="false" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="10MB" />
